--- a/index.html
+++ b/index.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Z13</title>
-  <link href="style1.css" rel="stylesheet" type="text/css"/>
+	<title>x7</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <script src="src/themes.js"></script>
 </head>
+<body id="body" onload="changeBackground()">
+    <div id="divimagen" class="cuadrado" onclick="changeBackground()"></div>
+    <div id="botones" class="cuadrado">
+        <div id="miscelaneo" class="boton">
+            <a class="links" id="youtube" href="https://www.youtube.com/feed/subscriptions">Youtube</a>
+            <a class="links" id="devianart"href="http://www.deviantart.com/browse/all/?columns=2">Deviantart</a>
+            <a class="links" id="tumblr" href="https://www.tumblr.com/dashboard" >Tumblr</a>
+            <a class="links" id="chan" href="http://4chan.org">4chan</a>
+        </div>
 
-<!--
-To get started you have to define a container element as a grid with display: grid, set the column and row sizes with grid-template-columns and grid-template-rows, and then place its child elements into the grid with grid-column and grid-row
--->
-  
-<body>
-  <div id="main">
-    <div id="submain">
-      <div class="one" ><a href="https://www.youtube.com/feed/subscriptions">Youtube</a></div>
-      <div class="one" ><a href="https://www.deviantart.com/whats-hot/">Deviantart</a></div>
-      <div class="one" ><a href="https://www.tumblr.com/dashboard" >Tumblr</a></div>
-      <div class="one" ><a href="https://4chan.org">4chan</a></div>
-      <div class="two" ><a href="https://www.reddit.com/">Reddit</a></div>
-      <div class="two" ><a href="https://kissmanga.com/MangaList">Kissmanga</a></div>
-      <div class="two" ><a href="https://myanimelist.net/animelist/just12">Anime list</a></div>
-      <div class="two" ><a href="https://myanimelist.net/mangalist/just12">Manga list</a></div>
-      <div class="three" ><a href="http://horriblesubs.info/">HorribleSubs</a></div>
-      <div class="three" ><a href="https://nyaa.pantsu.cat/">nyaa.se</a></div>
-      <div class="three" ><a href="https://1337x.to/">L337x</a></div>
-      <div class="three" ><a href="https://rarbg.to/">Rarbg</a></div>
+        <div id="weeabo" class="boton">
+            <a class="links" id="animeflv" href="http://animeflv.me/">Animeflv.me</a>
+            <a class="links" id="kissmanga" href="http://kissmanga.com/MangaList">Kissmanga</a>
+            <a class="links" id="myanimelist" href="https://myanimelist.net/">MyAnimeList</a>
+            <a class="links" id="nyaa" href="https://www.nyaa.se/">nyaa.se</a>
+        </div>
+
+        <div id="torrent" class="boton">
+            <a class="links" id="elite" href="http://www.elitetorrent.net/">EliteTorrent</a>
+            <a class="links" id="extra" href="http://extratorrent.cc/">EtraTorrent</a>
+            <a class="links" id="tproject" href="https://torrentproject.se/">TorrentProject</a>
+            <a class="links" id="leet" href="http://1337x.to/">L337x</a>
+        </div>
+
+        <div id="board" class="boton">
+            <a class="links" id="animew" href="http://boards.4chan.org/w/">Anime wallpapers</a>
+            <a class="links" id="wgeneral" href="http://boards.4chan.org/wg/">Wallpapers general</a>
+            <a class="links" id="anime" href="http://boards.4chan.org/a/">Anime</a>
+            <a class="links" id="technology" href="http://boards.4chan.org/g/">Technology</a>
+        </div>
     </div>
-    <div id="picture"></div>
-  </div>
-  <div class="background"></div>
-  <div id="menu">
-    <a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Gmail</a>
-    <a href="https://www.youtube.com/playlist?list=PLfKub_5UrXvYtDQG4t1HNJmgAy2EAIdvk">Música</a>
-    <a href="https://www.youtube.com/playlist?list=PLfKub_5UrXvZLBJ7do7fK5lGHuviHGtGD">Álbunes</a>
-    <a href="https://soundcloud.com/you/sets">Souncloud</a>
-    <a href="http://www.twitch.tv/directory/following/live">Twitch</a>
-	<a href="https://comfyfeel.github.io/">ComfyFeel</a>
-	<a href="https://docs.google.com/spreadsheets/u/0/">Sheets</a>
-    <a href="https://www.chrono.gg/">Chrono.gg</a>
-    <a href="https://www.youtube.com/feed/recommended">YT Recommended</a>
-	<a href="https://www.twitter.com/">Twitter</a>
-	<a href="https://github.com/">Github</a>
-  </div>
-  <script src="script.js"></script>
 </body>
 </html>
