--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <div id="botones" class="cuadrado">
         <div id="miscelaneo" class="boton">
             <a class="links" id="youtube" href="https://www.youtube.com/feed/subscriptions">Youtube</a>
-            <a class="links" id="devianart"href="http://www.deviantart.com/browse/all/?columns=2">Deviantart</a>
-            <a class="links" id="tumblr" href="https://www.tumblr.com/dashboard" >Tumblr</a>
-            <a class="links" id="chan" href="http://4chan.org">4chan</a>
+            <a class="links" id="google" href="https://www.google.com.au">Google</a>
+            <a class="links" id="twitter" href="https://www.twitter.com" >Twitter</a>
+            <a class="links" id="chan" href="https://www.twitch.tv/directory/following">Twitch</a>
         </div>
 
         <div id="weeabo" class="boton">
-            <a class="links" id="animeflv" href="http://animeflv.me/">Animeflv.me</a>
-            <a class="links" id="kissmanga" href="http://kissmanga.com/MangaList">Kissmanga</a>
-            <a class="links" id="myanimelist" href="https://myanimelist.net/">MyAnimeList</a>
-            <a class="links" id="nyaa" href="https://www.nyaa.se/">nyaa.se</a>
+            <a class="links" id="4chan" href="http://www.4chan.org">4chan</a>
+            <a class="links" id="/a/" href="https://boards.4chan.org/a/">/a/</a>
+            <a class="links" id="/ck/" href="https://boards.4chan.org/ck/">/ck/</a>
+            <a class="links" id="/fit/" href="https://boards.4chan.org/fit/">/fit/</a>
         </div>
 
         <div id="torrent" class="boton">
-            <a class="links" id="elite" href="http://www.elitetorrent.net/">EliteTorrent</a>
-            <a class="links" id="extra" href="http://extratorrent.cc/">EtraTorrent</a>
-            <a class="links" id="tproject" href="https://torrentproject.se/">TorrentProject</a>
-            <a class="links" id="leet" href="http://1337x.to/">L337x</a>
+            <a class="links" id="/w/" href="http://boards.4chan.org/w/">/w/</a>
+            <a class="links" id="nyaa" href="https://nyaa.si/?q=&f=0&c=1_2">Nyaa</a>
+            <a class="links" id="Gmail" href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Gmail</a>
+            <a class="links" id="leet" href="https://mail.cock.li/">Cockmail</a>
         </div>
 
         <div id="board" class="boton">
-            <a class="links" id="animew" href="http://boards.4chan.org/w/">Anime wallpapers</a>
-            <a class="links" id="wgeneral" href="http://boards.4chan.org/wg/">Wallpapers general</a>
-            <a class="links" id="anime" href="http://boards.4chan.org/a/">Anime</a>
-            <a class="links" id="technology" href="http://boards.4chan.org/g/">Technology</a>
+            <a class="links" id="Discord" href="https://discordapp.com/login">Discord</a>
+            <a class="links" id="" href=""></a>
+            <a class="links" id="" href=""></a>
+            <a class="links" id="" href=""></a>
         </div>
     </div>
 </body>
