--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>x7</title>
+	<title>Hi Ben</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <script src="src/themes.js"></script>
 </head>
