--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <div id="board" class="boton">
             <a class="links" id="Discord" href="https://discordapp.com/login">Discord</a>
+            <a class="links" id="GoogleDocs" href="https://docs.google.com/document/u/0/">/GoogleDocs/</a>
         </div>
     </div>
 </body>
