--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div id="board" class="boton">
             <a class="links" id="Discord" href="https://discordapp.com/login">Discord</a>
             <a class="links" id="GoogleDocs" href="https://docs.google.com/document/u/0/">GoogleDocs</a>
+            <a class="links" id="Hotmail" href="https://outlook.live.com/owa/?path=/mail/inbox">Hotmail</a>
         </div>
     </div>
 </body>
