--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a class="links" id="twitter" href="https://www.twitter.com" >Twitter</a>
             <a class="links" id="chan" href="https://www.twitch.tv/directory/following">Twitch</a>
             <a class="links" id="4chan" href="http://www.4chan.org">4chan</a>
+            <a class="links" id="nyaa" href="https://nyaa.si/?q=&f=0&c=1_2">Nyaa</a>
             <a class="links" id="Discord" href="https://discordapp.com/login">Discord</a>
         </div>
     </div>
