--- a/index.html
+++ b/index.html
@@ -1,22 +1,78 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Hi Ben</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-    <script src="src/themes.js"></script>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <title>K.W.L</title>
+        <link rel="shortcut icon" type="image/png" href="icons/favicon_01.png"/>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript">
+        $(document).ready(function() {
+               function updateClock() {
+                        var m = new Date();
+                        var dateString = ("0" + m.getHours()).slice(-2) + "`" + ("0" + m.getMinutes()).slice(-2)
+                        setTimeout(updateClock, 1000);
+               }
+               updateClock();
+               function updateDate() {
+             /* DAYS AND MONTHS IN ENGLISH */
+            var days = ['sunday','monday','tuesday','wenesday','thursday.','friday','saturday'];
+            var months=['january', 'february', 'march', 'april', 'may', 'june', 'july', 'august', 'september', 'october', 'november', 'december'];
+              var m = new Date();
+              var dateString = (days[ m.getDay() ])  + " " +  ("0" + m.getDate()).slice(-2) + " " + (months[ m.getMonth() ])   + " " + m.getFullYear()               
+                        document.getElementById('date').innerHTML = dateString;
+               }
+               updateDate();
+        });
+        </script>
 </head>
-<body id="body" onload="changeBackground()">
-    <div id="divimagen" class="cuadrado" onclick="changeBackground()"></div>
-    <div id="botones" class="cuadrado">
-        <div id="miscelaneo" class="boton">
-            <a class="links" id="youtube" href="https://www.youtube.com/feed/subscriptions">Youtube</a>
-            <a class="links" id="google" href="https://www.google.com.au">Google</a>
-            <a class="links" id="twitter" href="https://www.twitter.com" >Twitter</a>
-            <a class="links" id="chan" href="https://www.twitch.tv/directory/following">Twitch</a>
-            <a class="links" id="4chan" href="http://www.4chan.org">4chan</a>
-            <a class="links" id="nyaa" href="https://nyaa.si/?q=&f=0&c=1_2">Nyaa</a>
-            <a class="links" id="Discord" href="https://discordapp.com/login">Discord</a>
-        </div>
-    </div>
+
+<body>
+	<div id="container">
+                    <div id="banner">
+                            <div class="header">
+                                <div id="time">
+                                        <div id="date">dd</div>
+                                </div>
+                                <div class="message">
+                                        Welcome; Ben; いらっしゃいませ 
+                                </div>
+                            </div>
+                            <div class="form">
+                                <input  id="searchbox" name="q" type="text" autocomplete="off" class="cleardefault" maxlength="100"   placeholder="type faster than the speed of sound ..." size="17" autofocus="autofocus" />
+                                <input type="submit" id="image-button" value=""></input>
+                            </div>
+                    </div>
+                    <div class="footer">
+                        <div class="nav">
+                                <ul>
+                                        <a href="http://www.kissanime.ru/">
+                                                <li> アニメ  </li>
+                                        </a>
+                                        <a href="http://exhentai.org/">
+                                                <li> へんたい</li>
+                                        </a>
+                                        <a href="http://www.4chan.org/">
+                                                <li>yotsuba</li>
+                                        </a>
+                                        <a href="https://soundcloud.com/stream">
+                                                <li>soundcloud</li>
+                                        </a>
+                                        <a href="http://www.pixiv.net/">
+                                                <li>ピクシブ</li>
+                                        </a>
+                                        <a href="https://www.nyaa.si/">
+                                                <li>nya.se</li>
+                                        </a>
+                                </ul>
+                        </div>
+                        <div class="button">
+                                <button type="button" id="my-button">SHUFFLE</button>
+                        </div>
+                    </div>
+              </div>
 </body>
+<script type="text/javascript" src="js/banner.js"></script>
+<script type="text/javascript" src="js/search.js"></script>
 </html>
