--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
                     <div class="footer">
                         <div class="nav">
                                 <ul>
-                                        <a href="http://www.kissanime.ru/">
+                                        <a href="https://www.youtube.com/feed/subscriptions">
                                                 <li> アニメ  </li>
                                         </a>
-                                        <a href="http://exhentai.org/">
+                                        <a href="https://www.twitter.com">
                                                 <li> へんたい</li>
                                         </a>
                                         <a href="http://www.4chan.org/">
                                                 <li>yotsuba</li>
                                         </a>
-                                        <a href="https://soundcloud.com/stream">
-                                                <li>soundcloud</li>
+                                        <a href="https://www.twitch.tv/directory/following">
+                                                <li>twitch</li>
                                         </a>
-                                        <a href="http://www.pixiv.net/">
-                                                <li>ピクシブ</li>
-                                        </a>
-                                        <a href="https://www.nyaa.si/">
+                                        <a href="https://nyaa.si/?q=&f=0&c=1_2">
                                                 <li>nya.se</li>
+                                        </a>
+                                        <a href="https://discordapp.com/login">
+                                                <li>discord</li>
                                         </a>
                                 </ul>
                         </div>
