--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                                         <a href="https://discordapp.com/login">
                                                 <li>discord</li>
                                         </a>
+                                        <a href="https://danbooru.donmai.us/">
+                                                <li>段ボール</li>
+                                        </a>
                                 </ul>
                         </div>
                         <div class="button">
