--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                                         <a href="https://danbooru.donmai.us/">
                                                 <li>段ボール</li>
                                         </a>
+                                        <a href="http://localhost:8096/jellyfin/web/index.html#!/home.html">
+                                                <li>jellyfin</li>
+                                        </a>
                                 </ul>
                         </div>
                         <div class="button">
