--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                                         <a href="https://danbooru.donmai.us/">
                                                 <li>段ボール</li>
                                         </a>
+                                        <a href="https://gelbooru.com/index.php?page=post&s=list&tags=all">
+                                                <li>gelbooru</li>
+                                        </a>
+
+                                        <a href="https://coinmarketcap.com/all/views/all/">
+                                                <li>shitcoins</li>
+                                        </a>
                                         <a href="http://localhost:8096/jellyfin/web/index.html#!/home.html">
                                                 <li>jellyfin</li>
                                         </a>
