--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                                         <a href="https://coinmarketcap.com/all/views/all/">
                                                 <li>shitcoins</li>
                                         </a>
-                                        <a href="http://localhost:8096/jellyfin/web/index.html#!/home.html">
-                                                <li>jellyfin</li>
+                                        <a href="http://localhost:8096/web/index.html#!/home">
+                                                <li>emby</li>
                                         </a>
                                 </ul>
                         </div>
