--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                                         <a href="http://localhost:8096/web/index.html#!/home">
                                                 <li>emby</li>
                                         </a>
+                                        <a href="https://www.ebay.com.au">
+                                                <li>ebay</li>
+                                        </a>
                                 </ul>
                         </div>
                         <div class="button">
