--- a/index.html
+++ b/index.html
@@ -75,11 +75,14 @@
                                         <a href="https://coinmarketcap.com/all/views/all/">
                                                 <li>shitcoins</li>
                                         </a>
-                                        <a href="http://localhost:8096/web/index.html#!/home">
-                                                <li>emby</li>
+                                        <a href="http://127.0.0.1:32400/web/index.html#!/">
+                                                <li>plex</li>
                                         </a>
                                         <a href="https://www.ebay.com.au">
                                                 <li>ebay</li>
+                                        </a>
+                                        <a href="https://www.amazon.com.au">
+                                                <li>amazon</li>
                                         </a>
                                 </ul>
                         </div>
